everything works so far (windows, untested, though)
Also, there are still some debugging outputs too many, but well.

--- a/src/main/java/jline/package.html
+++ b/src/main/java/jline/package.html
@@ -1,7 +1,7 @@
 <body>
 <p>
 The core JLine API. The central class is
-<a href="ConsoleReader">jline.ConsoleReader</a>}, which
+{@link jline.ConsoleReader}, which
 is a reader for obtaining input from an arbitrary
 InputStream (usually <em>System.in</em>).
 </p>
